--- a/Авиаперелеты 1-10.md
+++ b/Авиаперелеты 1-10.md
@@ -75,7 +75,7 @@ where Passenger.name like "%man"
 ### 5 Вывести количество рейсов, совершенных на TU-134
 
 ```sql
-select count(Trip.*) as count from Trip
+select count(Trip.plane) as count from Trip
 WHERE plane = "TU-134"
 ```
 
